test/analyze/match/exhaustive_nested.exp
Error: Inexhaustive pattern matching. For example the pattern `(true, false)` is not matched.
test/analyze/match/exhaustive_nested.myte:23:2-27:3
 23 | /   match (true, true) {
    | |   ^^^^^^^^^^^^^^^^^^^^
 24 | |     | (true, true) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^
 25 | |     | (false, true) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^
 26 | |     | (false, false) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^
 27 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, false)` is not matched.
test/analyze/match/exhaustive_nested.myte:29:2-31:3
 29 | /   match (true, true) {
    | |   ^^^^^^^^^^^^^^^^^^^^
 30 | |     | (_, true) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^
 31 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(0, false)` is not matched.
test/analyze/match/exhaustive_nested.myte:48:2-51:3
 48 | /   match (1, true) {
    | |   ^^^^^^^^^^^^^^^^^
 49 | |     | (_, true) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^
 50 | |     | (1, _) -> ()
    | | ^^^^^^^^^^^^^^^^^^
 51 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, (_, 0), _)` is not matched.
test/analyze/match/exhaustive_nested.myte:78:2-80:3
 78 | /   match (1, (true, 1), true) {
    | |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 79 | |     | (_, (_, 1), _) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^
 80 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, (false, _), _)` is not matched.
test/analyze/match/exhaustive_nested.myte:82:2-84:3
 82 | /   match (1, (true, 1), true) {
    | |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 83 | |     | (_, (true, _), _) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 84 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, (false, _), false)` is not matched.
test/analyze/match/exhaustive_nested.myte:86:2-89:3
 86 | /   match (1, (true, 1), true) {
    | |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 87 | |     | (_, (true, _), _) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 88 | |     | (_, (false, _), true) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 89 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, (false, _), true)` is not matched.
test/analyze/match/exhaustive_nested.myte:91:2-95:3
 91 | /   match (1, (true, 1), true) {
    | |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 92 | |     | (_, (true, _), true) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 93 | |     | (_, (true, _), false) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 94 | |     | (_, (false, _), false) -> ()
    | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 95 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `Tup (_, Rec _)` is not matched.
test/analyze/match/exhaustive_nested.myte:132:2-137:3
 132 | /   match (x) {
     | |   ^^^^^^^^^^^
 133 | |     | Tup (_, Enum) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^
 134 | |     | Tup (_, Tup _) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 136 | |     | Rec _ -> ()
     | | ^^^^^^^^^^^^^^^^^
 137 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `Tup (false, Enum)` is not matched.
test/analyze/match/exhaustive_nested.myte:139:2-147:3
 139 | /   match (x) {
     | |   ^^^^^^^^^^^
 140 | |     | Tup (true, Enum) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 141 | |     | Tup (true, Tup _) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 146 | |     | Rec _ -> ()
     | | ^^^^^^^^^^^^^^^^^
 147 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `Tup (_, Rec { foo: false, ... })` is not matched.
test/analyze/match/exhaustive_nested.myte:149:2-155:3
 149 | /   match (x) {
     | |   ^^^^^^^^^^^
 150 | |     | Tup (_, Enum) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^
 151 | |     | Tup (_, Tup _) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 154 | |     | Rec _ -> ()
     | | ^^^^^^^^^^^^^^^^^
 155 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `Tup (false, _)` is not matched.
test/analyze/match/exhaustive_nested.myte:160:2-164:3
 160 | /   match (x) {
     | |   ^^^^^^^^^^^
 161 | |     | Tup (true, Enum) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 162 | |     | Rec _ -> ()
     | | ^^^^^^^^^^^^^^^^^
 163 | |     | Enum -> ()
     | | ^^^^^^^^^^^^^^^^
 164 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `Tup (_, Rec _ | Tup _)` is not matched.
test/analyze/match/exhaustive_nested.myte:166:2-170:3
 166 | /   match (x) {
     | |   ^^^^^^^^^^^
 167 | |     | Tup (_, Enum) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^
 168 | |     | Rec _ -> ()
     | | ^^^^^^^^^^^^^^^^^
 169 | |     | Enum -> ()
     | | ^^^^^^^^^^^^^^^^
 170 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `RecType { foo: 0, ... }` is not matched.
test/analyze/match/exhaustive_nested.myte:191:2-193:3
 191 | /   match (x) {
     | |   ^^^^^^^^^^^
 192 | |     | RecType { foo: 1, bar: _ } -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 193 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `RecType { bar: false, ... }` is not matched.
test/analyze/match/exhaustive_nested.myte:195:2-197:3
 195 | /   match (x) {
     | |   ^^^^^^^^^^^
 196 | |     | RecType { foo: _, bar: true } -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 197 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, RecType { bar: false, ... })` is not matched.
test/analyze/match/exhaustive_nested.myte:199:2-201:3
 199 | /   match ((x, x)) {
     | |   ^^^^^^^^^^^^^^^^
 200 | |     | (_, RecType { foo: _, bar: true }) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 201 | |   }
     | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `(_, RecType { bar: false, ... })` is not matched.
test/analyze/match/exhaustive_nested.myte:203:2-205:3
 203 | /   match ((x, x)) {
     | |   ^^^^^^^^^^^^^^^^
 204 | |     | (RecType _, RecType { foo: _, bar: true }) -> ()
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 205 | |   }
     | \ ^^^^